# clawless

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  config.toml.example  docker-compose.ghcr.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yaml
deploy/k8s/: README.md  clawless.toml  configmap-template.yaml  deployment.yaml  kustomization-template.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret-template.yaml  service.yaml
docs/: ARCHITECTURE.md  CODE_WALKTHROUGH.md  DEPLOYMENT.md  SPEC-CHANNELS.md  SPEC.md
docs/plans/: 001-mvp-implementation.md  002-test-channel.md  abundant-snacking-dahl.md  delightful-painting-turing.md  frolicking-bouncing-engelbart.md  gentle-singing-umbrella.md  glimmering-hopping-porcupine.md  mossy-bubbling-dolphin.md  polished-scribbling-hammock.md  quiet-riding-trinket.md  scalable-tickling-stream.md  send-message-tool.md  serialized-munching-planet.md  snazzy-soaring-pike.md  stateless-purring-reef.md  sunny-munching-stardust.md  zazzy-plotting-boot.md
docs/specs/: SPEC.md  system-prompt-split.md
spikes/python-channel/: .mcp.json  README.md  mcp-config.json  pyproject.toml  server.py
spikes/python-channel/.claude-plugin/: plugin.json
src/clawless/: __init__.py  agent.py  app.py  config.py  formatter.py  init.py  store.py  tools.py  utils.py  wiki.py
src/clawless/channels/: base.py  test.py  whatsapp.py
tests/: conftest.py  helpers.py  test_base.py  test_channel_integration.py  test_commands.py  test_config.py  test_docker_integration.py  test_store.py  test_utils.py
