[project]
name = "clawless"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hariharan Srinath", email = "srinathh@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
clawless = "clawless:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
