[project]
name = "clawless"
version = "0.1.0"
description = "Minimal self-hosted personal AI assistant via Claude Agent SDK"
readme = "README.md"
authors = [
    { name = "Hariharan Srinath", email = "srinathh@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "twilio",
    "pydantic-settings",
    "sqlitedict",
]

[project.scripts]
clawless = "clawless.app:main"
clawless-init = "clawless.init:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
markers = ["docker: Docker Compose integration tests (deselected by default)"]
addopts = "-m 'not docker'"

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
]
